# agenthack-test-agent

./: .gitignore  README.md  SIMULATION.md  bindings.json  ci_run.py  demo.py  entry-points.json  main.py  pyproject.toml  scopes.json  setup_tm.py  simulate.sh
.github/workflows/: uipath-test-heal.yml
__uipath/: state.db  uipath.json
approval-responder/: 060.txt  main.py  pyproject.toml  responder.mermaid  uipath.json
evaluations/eval-sets/: smoke-test.json
evaluations/evaluators/: exact-match.json
src/: __init__.py  calculator.py
test_generator/: __init__.py  graph.py  nodes.py  state.py
tests/: test_calculator.py
