[project]
name = "agenthack-test-agent"
version = "0.0.8"
description = "agenthack-test-agent"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
dependencies = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "uipath-langchain[bedrock,vertex]>=0.10.0, <0.11.0",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "uipath-dev>=0.0.79",
]
